--- a/style.css
+++ b/style.css
@@ -17,13 +17,16 @@ img {
   box-sizing: border-box;
 }
 
+.container {
+  max-width: 1296px;
+  margin: auto;
+}
+
 .header {
   border-bottom: 1px solid #f1f1f1;
 }
 
 .header-content {
-  margin: auto;
-  max-width: 1296px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -35,19 +38,20 @@ img {
   position: absolute;
   top: 28px;
   left: 0;
+  z-index: 1;
 }
 
-.header-content ul {
+.header-nav {
   display: flex;
   column-gap: 40px;
 }
 
-.header-content ul li {
-  padding: 4px 8px 4px 8px;
+.header-nav li {
+  padding: 4px 8px;
   position: relative;
 }
 
-.header-content ul li::before {
+.header-nav li::before {
   content: '';
   position: absolute;
   width: 8px;
@@ -60,7 +64,7 @@ img {
   border-left: 1px solid #919191;
 }
 
-.header-content ul li::after {
+.header-nav li::after {
   content: '';
   position: absolute;
   width: 8px;
@@ -73,7 +77,7 @@ img {
   border-right: 1px solid #919191;
 }
 
-.header-content ul li a::before {
+.header-nav li a::before {
   content: '';
   position: absolute;
   width: 8px;
@@ -86,7 +90,7 @@ img {
   border-right: 1px solid #919191;
 }
 
-.header-content ul li a::after {
+.header-nav li a::after {
   content: '';
   position: absolute;
   width: 8px;
@@ -99,44 +103,41 @@ img {
   border-left: 1px solid #919191;
 }
 
-.header-content ul li:hover::before,
-.header-content ul li:hover::after,
-.header-content ul li:hover > a::before,
-.header-content ul li:hover > a::after {
+.header-nav li:hover::before,
+.header-nav li:hover::after,
+.header-nav li:hover > a::before,
+.header-nav li:hover > a::after {
   opacity: 1;
 }
 
-.header-content ul li a {
+.header-nav li a {
+  display: block;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   text-decoration: none;
   color: #000000;
-  display: block;
 }
 
-.header-content ul li .click {
+.header-nav li .active {
   font-weight: 600;
 }
 
 .hero {
+  margin: auto;
+  max-width: 1920px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap-reverse;
+  column-gap: 24px;
 }
 
 .hero-content {
-  margin: auto;
-  max-width: 1154px;
+  max-width: 430px;
 }
 
-.hero img {
-  max-width: 100%;
-  height: auto;
-}
-
-.hero-content .frame h3 {
+.hero-content-box h1 {
   font-size: 40px;
   font-weight: 600;
   line-height: 48px;
@@ -144,7 +145,7 @@ img {
   margin-bottom: 24px;
 }
 
-.hero-content .frame p {
+.hero-content-box p {
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
@@ -152,35 +153,33 @@ img {
   margin-bottom: 8px;
 }
 
-.hero-content .frame p span {
+.hero-content-box p strong {
   background-image: url(./img/mark.png);
   background-repeat: no-repeat;
   background-position: 0 100%;
   background-size: contain;
-  display: inline-block;
 }
 
-.hero-content .frame .en {
+.hero-content-box .en {
   font-size: 16px;
   line-height: 24px;
   margin-top: 16px;
   margin-bottom: 0px;
 }
 
-.hero-content .frame ul {
+.hero-content-box ul {
   display: flex;
   margin-top: 60px;
   column-gap: 16px;
 }
 
-.hero-content .frame ul li img {
+.hero-content-box ul li img {
   display: block;
 }
 
 .title-lg {
-  justify-content: center;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   margin-bottom: 80px;
 }
@@ -191,12 +190,12 @@ img {
   height: 6px;
 }
 
-.title-lg p {
+.title-lg h2 {
   font-size: 32px;
   font-weight: 600;
   line-height: 38.4px;
-  letter-spacing: 0.12em;
   color: #3b3b3b;
+  letter-spacing: 0.12em;
   margin: 0 16px;
 }
 
@@ -207,14 +206,16 @@ img {
 .works-content .travel {
   background-image: url(./img/homepage-work1-bg.png);
   background-size: cover;
+  background-position: center;
   display: flex;
   position: relative;
-  max-height: 800px;
+  height: auto;
 }
 
 .works-content .app {
   background-image: url(./img/homepage-work2-lg.png);
   background-size: cover;
+  background-position: center;
   display: flex;
   position: relative;
   height: 800px;
@@ -223,15 +224,11 @@ img {
 .works-content .art {
   background-image: url(./img/homepage-work3-bg.png);
   background-size: cover;
+  background-position: center;
   display: flex;
   position: relative;
-  height: 800px;
-}
-
-.works-content .travel,
-.works-content .app,
-.works-content .art {
   width: 100%;
+  height: auto;
 }
 
 .works-content .art::before,
@@ -261,27 +258,24 @@ img {
 
 .travel-content {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  column-gap: 55px;
-  max-width: 1296px;
-  margin: auto;
+  width: 1296px;
+  /* column-gap: 55px; */
 }
 
 .travel-content img {
   margin-top: 80px;
   align-self: flex-end;
   max-width: 714px;
-  width: 40%;
+  width: 56%;
   height: auto;
   display: block;
-  flex: 1;
   z-index: 1;
 }
 
 .travel-content .introduction {
-  min-width: 526px;
-  max-width: 100%;
+  width: 526px;
   padding: 80px 40px 56px 40px;
   border-radius: 24px;
   background-color: #ffffff1a;
@@ -348,19 +342,17 @@ img {
 }
 
 .introduction .btn a img {
-  align-items: center;
   width: 24px;
   height: 24px;
-  display: block;
   margin: 0 0 0 8px;
 }
 
 .app-content {
-  margin: auto;
-  width: 1296px;
   display: flex;
-  align-items: center;
+  width: 1296px;
+  margin: 0 auto;
   justify-content: flex-start;
+  align-items: center;
 }
 
 .app .introduction {
@@ -373,20 +365,18 @@ img {
 }
 
 .art-content {
-  margin: auto;
   display: flex;
-  /* flex-wrap: wrap; */
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  max-width: 1296px;
-  column-gap: 49px;
+  width: 1296px;
+  /* column-gap: 49px; */
 }
 
 .art-content img {
   margin-top: 176px;
   margin-bottom: 112px;
   max-width: 721px;
-  width: 56%;
+  width: 58%;
   height: auto;
   z-index: 2;
 }
@@ -406,17 +396,11 @@ img {
   padding: 120px 0;
 }
 
-.services .title-lg {
-  margin-top: 0px;
-}
-
 .services .content {
   display: flex;
-  margin: 0 auto;
   justify-content: center;
   flex-wrap: wrap;
   gap: 24px;
-  max-width: 1296px;
 }
 
 .services .content li {
@@ -482,7 +466,6 @@ img {
   width: 24px;
   height: 24px;
   display: block;
-  /* position: static; */
   margin-left: 8px;
 }
 
@@ -491,8 +474,6 @@ img {
 }
 
 .articles-content {
-  margin: auto;
-  max-width: 1296px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -544,7 +525,6 @@ img {
   width: 12px;
   height: 12px;
   border-radius: 6px;
-
   background-color: #e9e9e9;
 }
 
@@ -554,17 +534,15 @@ img {
 
 .footer-lg {
   background-image: url(./img/footer-bg-lg.png);
-  padding: 80px 0;
+  padding: 40px 0;
 }
 
 .footer-content {
-  margin: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  max-width: 1296px;
-  flex-wrap: wrap;
-  column-gap: 690px;
+  /* flex-wrap: wrap; */
+  /* column-gap: 690px; */
   row-gap: 24px;
 }
 
@@ -573,9 +551,9 @@ img {
 }
 
 .footer-contrat img {
-  margin-bottom: 24px;
   width: 120px;
   height: 54px;
+  margin-bottom: 24px;
 }
 
 .footer-contrat h3 {
@@ -593,14 +571,14 @@ img {
   margin-top: 24px;
 }
 
-.footer-lg .link {
+.footer-link {
   width: 306px;
   display: flex;
   flex-direction: column;
   row-gap: 24px;
 }
 
-.footer-lg .link li {
+.footer-link li {
   display: flex;
   align-items: center;
   padding: 7px 24px 7px 24px;
@@ -609,12 +587,12 @@ img {
   background-color: #ffffff;
 }
 
-.footer-lg .link .black {
+.footer-link .black {
   background-color: #000000;
-  border: none;
+  /* border: none; */
 }
 
-.footer-lg .link li a {
+.footer-link li a {
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
@@ -623,7 +601,7 @@ img {
   margin-left: 8px;
 }
 
-.footer-lg .link .black a {
+.footer-link .black a {
   color: #ffffff;
   font-weight: 700;
 }
