--- a/style_sm.css
+++ b/style_sm.css
@@ -170,7 +170,7 @@
   width: 100%;
 }
 
-.hero-content-sm .frame-sm h3 {
+.hero-content-box-sm h1 {
   font-size: 32px;
   font-weight: 700;
   line-height: 38.4px;
@@ -178,7 +178,7 @@
   margin-bottom: 24px;
 }
 
-.hero-content-sm .frame-sm p {
+.hero-content-box-sm p {
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
@@ -186,7 +186,7 @@
   margin-bottom: 8px;
 }
 
-.hero-content-sm .frame-sm p span {
+.hero-content-box-sm p strong {
   background-image: url(./img/mark.png);
   background-repeat: no-repeat;
   background-position: 0 100%;
@@ -194,7 +194,7 @@
   display: inline-block;
 }
 
-.hero-content-sm .frame-sm .en {
+.hero-content-box-sm .en {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -203,14 +203,14 @@
   margin-bottom: 0px;
 }
 
-.hero-content-sm .frame-sm ul {
+.hero-content-box-sm ul {
   display: flex;
   justify-content: center;
   margin-top: 24px;
   column-gap: 16px;
 }
 
-.hero-content-sm .frame-sm ul li img {
+.hero-content-box-sm ul li img {
   margin-top: 0;
   display: block;
 }
@@ -259,7 +259,7 @@
   height: 6px;
 }
 
-.title-sm p {
+.title-sm h2 {
   font-size: 24px;
   font-weight: 700;
   line-height: 28.8px;
